# D-Concierge

./: .dockerignore  .gitignore  AGENTS.md  README.md  alembic.ini  config.example.yaml  output-schema.json  pyproject.toml
.issue/: 2026-05-10_09-03-26_バックエンド結合テストがPostgreSQLを使用していない.md  2026-05-10_11-45-54_固定検証でMermaid記法を確認できていない.md  2026-05-10_21-19-30_アプリケーションポート詳細設計と実装配置が乖離している.md  2026-05-10_21-19-30_結合テストのCI実行方針がワークフローと乖離している.md  2026-05-10_21-40-45_パス安全性サービスの配置が設計と実装で異なる.md  2026-05-10_21-40-45_共通エラー設計と実装配置分類が乖離している.md  2026-05-10_23-35-04_機能追加計画.md  2026-05-11_10-14-10_検証用Codex出力の固定検証と再検証指示が不足している.md  2026-05-11_10-28-55_メッセージ定義を1つのファイルに集める.md  2026-05-11_16-25-00_codex実行時のエラーについて.md  2026-05-12_13-37-00_codex実行時の通信エラーについて.md  2026-05-20_14-30-47_履歴切替時に古いSSE接続が即時closeされない.md  2026-05-21_06-35-10_チャット削除機能の詳細設計反映.md  2026-05-24_17-00-00_DBの状態カラムをEnumに変更.md  2026-05-26_12-56-46_Viteのchunkサイズ警告解消検討.md  2026-05-29_21-39-00_指示の入力長制限を設ける.md  2026-05-30_15-28-00_Windows対応の仕様変更.md  2026-05-30_21-30-34_Docker Compose版でCodex実行コンテナを起動できない可能性.md  2026-06-13_14-35-47_IPA Books検索スキルのHTML参照先が実データ配置と不一致.md  20260505_004916_codex-workセッション管理.md  20260505_085910_codex-readonly-docs-mismatch.md  APIスキーマ設計がPydantic前提だが実装はデータクラスになっている.md  Codex成果物配信でJPEG画像が許可されていない.md  DBセッション管理が設計の専用ディレクトリではなくアプリファクトリにある.md  SPA静的配信設定が実装されていない.md  SSEペイロードスキーマ設計と実装配置が乖離している.md  Windows_Linux両対応の実装と検証が不足している.md  backend-integration-tests-do-not-use-postgresql.md  compose-service-name-mismatch.md  dockerコンテナ内でCodexを実行する.md  トレースログ設計と実装項目が乖離している.md  ドメインモデルと値オブジェクトの実装が設計より不足している.md  (+7 more)
infra/: Dockerfile  (+1 more)
(+984 files in other folders)
