[project]
name = "d-concierge"
version = "0.1.0"
description = "D-Concierge MVP backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.17.0",
  "fastapi>=0.124.0",
  "psycopg[binary]>=3.3.0",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.12.0",
  "pyyaml>=6.0.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "mypy>=1.19.0",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.0",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_explicit = true
disallow_any_generics = true
warn_redundant_casts = true
mypy_path = ["src"]
explicit_package_bases = true
exclude = [
  ".venv",
  ".mypy_cache",
  ".ruff_cache",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = [
  "src/backend/tests",
]

[tool.coverage.run]
branch = true
source = [
  "src/backend",
]

[tool.coverage.report]
show_missing = false
